--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "dev": "next",
     "now-build": "next build",
     "lint-staged": "lint-staged",
-    "lint": "eslint --fix --ext .js,.jsx ./",
-    "semantic-release": "semantic-release"
+    "lint": "eslint --fix --ext .js,.jsx ./"
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
@@ -41,7 +40,6 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "2.1.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -53,12 +51,6 @@
     "lint-staged": "^8.1.5",
     "preact": "^8.4.2",
     "prettier": "^1.16.4",
-    "semantic-release": "^15.13.3",
     "webpack": "^4.29.6"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
